@@ -10,6 +10,7 @@ Bugs fixed in 1.7.2b:
   - `make distcheck' will now work in `_inst/' and `_build' instead
     of `=inst/' and `=build/'
   - use `_dirstamp' when the file-system doesn't support `.dirstamp'
+  - install/uninstall `*.i[0-9][0-9]'-style info files
   - more changes that affect only the Automake package (not its output)
 * Fix some incompatibilities with upcoming perl-5.10.
 * Properly quote AC_PACKAGE_TARNAME and AC_PACKAGE_VERSION when defining
